## $Id$
## Copyright (C) 2000 Roger Leigh
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.4 gnu

@SET_MAKE@

MAINT_CHARSET = latin1

include $(top_srcdir)/scripts/global.mk


## Variables

INCLUDES = @LIBXML_CFLAGS@
LOCAL_CFLAGS = -DPKGMODULEDIR=\"$(pkgmoduledir)\" -DPKGXMLDATADIR=\"$(pkgxmldatadir)\" -DPKGMISCDATADIR=\"$(pkgmiscdatadir)\"

pkgconfigdatadir = $(prefix)/lib/pkgconfig
pkgxmldatadir = $(pkgdatadir)/$(VERSION)/xml
pkgmiscdatadir = $(pkgdatadir)/$(VERSION)
pkgmoduledir = $(pkglibdir)/$(VERSION)/modules


## Programs

if BUILD_MODULES
pkgmodule_LTLIBRARIES = canon.la escp2.la lexmark.la pcl.la ps.la raw.la
endif

canon_la_SOURCES = print-canon.c
canon_la_LDFLAGS = -module -avoid-version

escp2_la_SOURCES = \
	print-escp2.c \
	print-escp2.h \
	print-escp2-data.c \
	escp2-channels.c \
	escp2-inks.c \
	escp2-papers.c \
	escp2-resolutions.c
escp2_la_LDFLAGS = -module -avoid-version

lexmark_la_SOURCES = print-lexmark.c
lexmark_la_LDFLAGS = -module -avoid-version

pcl_la_SOURCES = print-pcl.c
pcl_la_LDFLAGS = -module -avoid-version

ps_la_SOURCES = print-ps.c
ps_la_LDFLAGS = -module -avoid-version

raw_la_SOURCES = print-raw.c
raw_la_LDFLAGS = -module -avoid-version

lib_LTLIBRARIES = libgimpprint.la

module_SOURCES = \
	$(canon_la_SOURCES) \
	$(escp2_la_SOURCES) \
	$(lexmark_la_SOURCES) \
	$(pcl_la_SOURCES) \
	$(ps_la_SOURCES) \
	$(raw_la_SOURCES)

if !BUILD_MODULES
libgimpprint_modules = $(module_SOURCES)
endif

libgimpprint_la_SOURCES = \
	bit-ops.c \
	color.h \
	curve.c \
	dither.h \
	gimp-print-internal.h \
	list.h \
	module.c \
	module.h \
	path.c \
	path.h \
	papers.h \
	dither-main.c \
	dither-ed.c \
	dither-ordered.c \
	dither-fast.c \
	dither-eventone.c \
	dither-very-fast.c \
	dither-inks.c \
	dither-impl.h \
	dither-inlined-functions.h \
	print-dither-matrices.c \
	print-list.c \
	print-util.c \
	print-vars.c \
	print-papers.c \
	print-color.c \
	print-weave.c \
	print-version.c \
	printers.c \
	image.c \
	image.h \
	printers.h \
	string-list.c \
	util.h \
	vars.h \
	weave.h \
	xml.c \
	xml.h \
	$(libgimpprint_modules)

libgimpprint_la_LIBADD = $(GIMPPRINT_LIBDEPS)
# Uncommment to build an unversioned library (version in soname)
libgimpprint_version = -release $(GIMPPRINT_VERSION)
# Uncomment to build a versioned library
#libgimpprint_version = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
libgimpprint_la_LDFLAGS = $(libgimpprint_version) \
	-rpath $(libdir) \
	-export-symbols $(srcdir)/libgimpprint.sym


## Data

pkgconfigdata_DATA = gimpprint.pc

pkgxmldata_DATA = \
	papers.xml \
	printers.xml

pkgmiscdata_DATA = \
	1x1.mat \
	2x1.mat \
	4x1.mat


## Rules

dist-hook:
# Remove files generated by configure
	$(RM) $(distdir)/gimpprint.pc.in


## Clean

CLEANFILES = printers-oldlist.h papers-oldlist.h
DISTCLEANFILES = gimpprint.pc gimpprint.pc.in
MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(pkgxmldata_DATA) $(pkgmiscdata_DATA) libgimpprint.sym
