## $Id$
## Copyright (C) 2000 Roger Leigh
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.4 gnu

@SET_MAKE@

MAINT_CHARSET = latin1

include $(top_srcdir)/scripts/global.mk


## Variables

LOCAL_CFLAGS = $(GIMPPRINT_CFLAGS) -DPKGMODULEDIR=\"$(pkgmoduledir)\" -DPKGXMLDATADIR=\"$(pkgxmldatadir)\" -DPKGMISCDATADIR=\"$(pkgmiscdatadir)\"

pkgconfigdatadir = $(prefix)/lib/pkgconfig
pkgxmldatadir = $(pkgdatadir)/$(VERSION)/xml
pkgmiscdatadir = $(pkgdatadir)/$(VERSION)
pkgmoduledir = $(pkglibdir)/$(VERSION)/modules


## Programs

if BUILD_MODULES
pkgmodule_LTLIBRARIES = canon.la escp2.la lexmark.la pcl.la ps.la olympus.la raw.la
endif

canon_la_SOURCES = print-canon.c
canon_la_LDFLAGS = -module -avoid-version

escp2_la_SOURCES = \
	print-escp2.c \
	escp2-driver.c \
	print-escp2.h \
	print-escp2-data.c \
	escp2-channels.c \
	escp2-inks.c \
	escp2-papers.c \
	escp2-resolutions.c
escp2_la_LDFLAGS = -module -avoid-version

lexmark_la_SOURCES = print-lexmark.c
lexmark_la_LDFLAGS = -module -avoid-version

pcl_la_SOURCES = print-pcl.c
pcl_la_LDFLAGS = -module -avoid-version

ps_la_SOURCES = print-ps.c
ps_la_LDFLAGS = -module -avoid-version

olympus_la_SOURCES = print-olympus.c
olympus_la_LDFLAGS = -module -avoid-version

raw_la_SOURCES = print-raw.c
raw_la_LDFLAGS = -module -avoid-version

lib_LTLIBRARIES = libgimpprint.la

module_SOURCES = \
	$(canon_la_SOURCES) \
	$(escp2_la_SOURCES) \
	$(lexmark_la_SOURCES) \
	$(pcl_la_SOURCES) \
	$(ps_la_SOURCES) \
	$(olympus_la_SOURCES) \
	$(raw_la_SOURCES)

if !BUILD_MODULES
libgimpprint_modules = $(module_SOURCES)
endif

libgimpprint_la_SOURCES = \
	array.c \
	bit-ops.c \
	channel.c \
	color.h \
	curve.c \
	dither.h \
	gimp-print-internal.h \
	module.c \
	module.h \
	path.c \
	path.h \
	dither-main.c \
	dither-ed.c \
	dither-ordered.c \
	dither-fast.c \
	dither-eventone.c \
	dither-very-fast.c \
	dither-inks.c \
	dither-impl.h \
	dither-inlined-functions.h \
	print-dither-matrices.c \
	print-list.c \
	print-util.c \
	print-vars.c \
	print-papers.c \
	print-color.c \
	print-weave.c \
	print-version.c \
	printers.c \
	image.c \
	image.h \
	printers.h \
	sequence.c \
	string-list.c \
	util.h \
	vars.h \
	bit-ops.h \
	weave.h \
	xml.c \
	xml.h \
	$(libgimpprint_modules)

libgimpprint_la_LIBADD = $(GIMPPRINT_LIBDEPS)
# Uncommment to build an unversioned library (version in soname)
libgimpprint_version = -release $(GIMPPRINT_VERSION)
# Uncomment to build a versioned library
#libgimpprint_version = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
libgimpprint_la_LDFLAGS = $(libgimpprint_version) \
	-rpath $(libdir) \
	-export-symbols $(srcdir)/libgimpprint.sym


## Data

pkgconfigdata_DATA = gimpprint.pc

pkgxmldata_DATA = \
	dither-matrix-1x1.xml \
	dither-matrix-2x1.xml \
	dither-matrix-4x1.xml \
	papers.xml \
	printers.xml



## Rules

all-local: xmli18n-tmp.h


xmli18n-tmp.h:  papers.xml printers.xml
# Pull out translatable strings from XML files.  This is crude, but
# works for now.
	sed -e '/description.*value/!d' \
	  -e 's/.*description.*value="\([^"]*\)".*/N_("\1");/' \
	  < papers.xml > $@;
	sed -e '/printer.*name/!d' \
	  -e 's/.*printer.*name="\([^"]*\)".*/N_("\1");/' \
	  < printers.xml >> $@;

dist-hook: xmli18n-tmp.h
# xmli18n-tmp.h is needed by po/POTFILES.in at dist time
# Remove files generated by configure
	-$(RM) $(distdir)/gimpprint.pc.in


## Clean

CLEANFILES = xmli18n-tmp.h
DISTCLEANFILES = gimpprint.pc gimpprint.pc.in
MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(pkgxmldata_DATA) libgimpprint.sym
